# component-model-calculator

./: .gitignore  README.md
adder/: Cargo.toml
adder/src/: lib.rs
calculator/: Cargo.toml
calculator/src/: bindings.rs  lib.rs
command/: Cargo.toml
command/src/: bindings.rs  main.rs
divisor/: Cargo.toml
divisor/src/: bindings.rs  lib.rs
exp/: exp.c  exponential-component.wasm  exponential-core.wasm  exponential.c  exponential.h
multiplier/: Cargo.toml
multiplier/src/: bindings.rs  lib.rs
square/: Cargo.toml
square/src/: bindings.rs
squarer/: Cargo.toml
squarer/src/: bindings.rs  lib.rs
subtractor/: Cargo.toml
subtractor/src/: bindings.rs  lib.rs
wit/: calculator.wit
